--- a/tvshow.css
+++ b/tvshow.css
@@ -36,13 +36,13 @@ background-size: cover;
 h1{
     font-size:xxx-large;
     font-family: sans-serif;
-    color: #E08769;
+    color: white;
 }
 
 .searchForm{
 width: 100%;
 max-width: 700px;
-background: rgba(255, 255, 255, .2);
+background: 7fb8bd;
 border-radius: 60px;
 padding: 10px 20px;
 display: flex;
@@ -55,11 +55,12 @@ align-items: center;
     height: 1.5em;
     padding: 5px;
     font-size: 19px;
-    background: rgba(255, 255, 255, .2);
+    background: #7fb8bd;
     border-radius: 60px;
+    border: 1px solid #7283c8;
     border-spacing: 4px;
    
-    color: #E08769;
+    color: white;
     background: transparent;
 
 }
@@ -71,18 +72,38 @@ button{
     padding: 5px;
     font-size: 17px;
     background: rgba(255, 255, 255, .2);
+    border: 1px solid #7283c8;
 border-radius: 60px;
-color: #E08769;
+
 cursor: pointer;
   overflow: hidden;
+  display:inline-flex;
+  justify-content: space-around;
+  align-items: center;
 }
 
 
 button:hover{
     transform: scale(1.05);
 }
+
+#buttonText{
+    color: white;
+    margin: 5px;
+    padding: 15px;
+    letter-spacing: 1px;
+}
+#buttonIcon{
+    color: white;
+    background-color: 5EE075;
+    margin-right: 5px;
+    margin-top: 5px;
+    scale: 1.5;
+    
+}
 ::placeholder{
-    color: #e0876969
+    color: rgba(0, 111, 167, 0.514);
+    font-weight: bold;
 }
 
 #theResult{
@@ -143,7 +164,7 @@ h2{
 
 .singleImage:hover .imgPar{
     opacity: 2;
-    color: #5EE075;
+    color: white;
     transform: translateZ(-50px);
     
 }
@@ -171,7 +192,7 @@ h2{
     width: 300px;
     height: 500px;
     opacity: 2;
-    
+    letter-spacing: 1px;
     font-family: sans-serif;
     font-size: 30;
 }
